[fix]#12676 align items in editor scrapbook attachments

--- a/modules/_drawing-zone.scss
+++ b/modules/_drawing-zone.scss
@@ -37,6 +37,9 @@
 			@include border-radius();
 			max-width: none;
 			display: block;
+			.element{
+			    display: inline-block;
+			}
 		}
 
 		> div{
